alchemy pages and elements

--- a/app/views/alchemy/page_layouts/_index.html.slim
+++ b/app/views/alchemy/page_layouts/_index.html.slim
@@ -1,1 +1,185 @@
-= render_elements
+.slider
+  .slide.slide1
+    .container
+      .row
+        .col-lg-12
+          .text-bar
+            h1 Ihr Spezialist für Aus- und Weiterbildung
+          .text-bar
+            h1 für im sozialen Bereich tätige Menschen und Organisationen
+    .container-nav
+      .row
+        .col-lg-12 align="center"
+          .slider-nav
+            .circle>
+            .circle>
+            .circle>
+/ .slide.slide2
+    .container
+      .row
+        .col-lg-12
+          .text-bar
+            h1 Profitieren Sie von 20 Jahren Erfahrung
+          .text-bar
+            h1 Starten Sie eine Ausbildung bei den Spezialisten für den sozialen Bereich!
+    .container-nav
+      .row
+        .col-lg-12 align="center"
+          .slider-nav
+            .circle
+            .circle
+            .circle
+/ .slide.slide3
+    .container
+      .row
+        .col-lg-12
+          .text-bar
+            h1 Profitieren Sie von 20 Jahren Erfahrung
+          .text-bar
+            h1 Starten Sie eine Ausbildung bei den Spezialisten für den sozialen Bereich!
+    .container-nav
+      .row
+        .col-lg-12 align="center"
+          .slider-nav
+            .circle
+            .circle
+            .circle
+/ .container.bereich-block
+  .row
+    .col-md-4.desktop-only
+      .content.fuw
+        h2 FORT- UND WEITERBILDUNG
+        .img-container
+        .bereich-content
+          p Wir qualifizieren insbesondere Hilfs-, Fach- und Führungskräfte aus sozialen Einrichtungen.
+            Nutzen Sie unsere Kompetenzen und langjährigen Erfahrungen und planen Sie Ihre Weiterbildung mit uns!
+        .cta = link_to 'Mehr Informationen', '/seminare', class: 'cta-btn'
+    .col-md-4.desktop-only
+      .content.aus
+        h2 AUSBILDUNG
+        .img-container
+        .bereich-content
+          p
+            | Wir bilden aus:
+          ul
+            li = link_to 'staatlich anerkannten Heilerziehungspfleger/-in', '/ausbildung/heilerziehungspflege'
+            li = link_to 'Heilpädagogen/-in', '/ausbildung/heilpaedagogik'
+            li = link_to 'staatlich anerkannten Erzieher/-in', '/ausbildung/erzieher'
+        .cta = link_to 'Mehr Informationen', '/ausbildung', class: 'cta-btn'
+    .col-md-4.desktop-only
+      .content.quer
+        h2 QUEREINSTIEG
+        .img-container
+        .bereich-content
+          p Im Bundesmodellprojekt „Quereinstieg – Männer und Frauen in Kitas“ absolvieren bei uns
+            derzeit 41 Berufsumsteiger*innen eine Ausbildung zum*zur staatlich anerkannten
+            Erzieher*in. Haben Sie auch schon einmal daran gedacht, in den Erzieher*innen-Beruf
+            zu wechseln?
+        .cta = link_to 'Mehr Informationen', '/quereinstieg', class: 'cta-btn'
+    .mobile-only.accordion-bereich.col-md-12
+      #accordion.panel-group
+        .panel.panel-default
+          .panel-heading
+            h2
+              a data-parent="#accordion" data-toggle="collapse" href="#collapseOne"
+                | FORT- UND WEITERBILDUNG
+                span.glyphicon.glyphicon-menu-down
+          #collapseOne.panel-collapse.collapse
+            .content.fuw
+              .img-container
+              .bereich-content
+                p
+                  | Mit unserem Weiterbildungsangebot steht Ihnen ein Weiterbildungstool zur Verfügung, mit dem SIe,
+                  | Ihre Mitarbeiter/innen aktuell und
+                  | flexibelentsprechend Ihrer individuellen Personalentwicklungsbedarfe
+                  | zu qualifizieren.
+              .cta
+                a.cta-btn href="#"  Mehr Informationen
+      .panel.panel-default
+        .panel-heading
+          h2.panel-title
+            a data-parent="#accordion" data-toggle="collapse" href="#collapseTwo"
+              | AUSBILDUNG
+              span.glyphicon.glyphicon-menu-down
+        #collapseTwo.panel-collapse.collapse
+          .content.aus
+            .img-container
+            .bereich-content
+              p
+                | Wir bilden aus:
+              ul
+                li
+                  a href="#"  staatlich anerkannten Heilerziehungspfleger/-in
+                li
+                  a href="#"  Heilpädagogen/-in
+                li
+                  a href="#"  staatlich anerkannten Erzieher/-in
+            .cta
+              a.cta-btn href="#"  Mehr Informationen
+      .panel.panel-default
+        .panel-heading
+          h2.panel-title
+            a data-parent="#accordion" data-toggle="collapse" href="#collapseThree"
+              | QUEREINSTIEG
+              span.glyphicon.glyphicon-menu-down
+        #collapseThree.panel-collapse.collapse
+          .content.quer
+            .img-container
+            .bereich-content
+              p
+                | Das Bundesmodellprojekt
+                | QUEREINSTIEG bietet in zwei
+                | Modelljahrgängen je 25
+                | Ausbildungsplätze für Berufsumsteiger/innen, die in den Erzieher/innen-Beruf wechseln möchten.
+            .cta
+              a.cta-btn href="#"  Mehr Informationen
+/ .container.big-cta
+  .row
+    .col-md-12
+      .flex
+        .text
+          i.fa.fa-envelope.fa-3x aria-hidden="true"
+          span Kontakt
+        .cta
+          a.cta-btn href="#"  Jetzt Kontakt aufnehmen
+.container.seminar
+  .row
+    .col-md-12
+      h2 AKTUELLE SEMINARE
+    - current_seminars = Seminar.published.where('date > NOW()').order(:date).limit(8)
+    - current_seminars.in_groups_of(4).each do |seminars|
+      .col-md-6
+        ul
+          - seminars.each do |seminar|
+            li.flex = link_to main_app.seminar_visitor_url(seminar), class: 'seminar-link' do
+              span.seminar-name = truncate seminar.title, length: 150
+              span.seminar-date = ldate seminar.date
+    .col-md-12
+      .cta = link_to 'Weitere Seminare', main_app.seminare_visitor_url, class: 'cta-btn'
+      .clearfix
+  / .container.testimonial
+  / .row
+    .col-md-12
+      h2 DAS SAGEN UNSERE WEITERBILDUNGS- UND AUSBILDUNGSTEILNEHMER/INNEN
+    .col-md-4
+      .testimonial-bubble
+        p
+          | “Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+          | labore et dolore magna aliquyam erat, sed diam...”
+        span.author Jane Doe
+        .clearfix
+    .col-md-4
+      .testimonial-bubble
+        p
+          | “...Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+          | labsed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kmagna
+          | aliquyam erat, sed diam....”
+        span.author John Doe
+        .clearfix
+    .col-md-4
+      .testimonial-bubble
+        p
+          | “Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+          | labore et dolore magna aliquyam erat, sed diam...”
+        span.author Jane Doe
+        .clearfix
