--- a/app/views/layouts/external/_navigation.html.slim
+++ b/app/views/layouts/external/_navigation.html.slim
@@ -9,7 +9,7 @@ nav.navbar.navbar-default.navbar-fixed-top
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand href=root_url
+      a.navbar-brand href=alchemy.root_url
 
     #navbar-collapse.collapse.navbar-collapse
       ul.nav.navbar-nav.navbar-right
@@ -17,11 +17,17 @@ nav.navbar.navbar-default.navbar-fixed-top
           a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
             | Bildungswerk
           ul.dropdown-menu.dropdown-menu.menu-items
-            - links = { 'Unser Profil' => 'profil', 'Team' => 'team', 'Standorte' => 'standorte' }
-            - links.each do |label, path|
+            li = link_to 'Wir über uns', 'http://bildungswerk-lsa.de/index.php?article_id=22'
+            li = link_to 'Team', 'http://bildungswerk-lsa.de/index.php?article_id=42'
+            / - links = { 'Unser Profil' => 'profil', 'Team' => 'team', 'Standorte' => 'standorte' }
+            / - links.each do |label, path|
               - path = "/bildungswerk/#{path}"
               li class=('active' if request.path == path) = link_to label, path
         li.dropdown.yellow-menu class=('active' if request.path =~ /\A\/(fort-und-weiterbildung|seminare)/)
+          = link_to 'Fort- und Weiterbildung', main_app.seminare_visitor_url
+        / li.dropdown.yellow-menu class=('active' if request.path =~ /\A\/(fort-und-weiterbildung|seminare)/)
+          = link_to 'Fort- und Weiterbildung', '/fort-und-weiterbildung'
+        / li.dropdown.yellow-menu class=('active' if request.path =~ /\A\/(fort-und-weiterbildung|seminare)/)
           a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
             | Fort- und Weiterbildung
           ul.dropdown-menu.menu-items
@@ -32,7 +38,9 @@ nav.navbar.navbar-default.navbar-fixed-top
             - links.each do |label, path|
               - path = "/fort-und-weiterbildung/#{path}"
               li class=('active' if request.path == path) = link_to label, path
-        li.dropdown.yellow-menu class=('active' if request.path =~ /\A\/ausbildung/)
+        li.dropdown.yellow-menu
+          = link_to 'Ausbildung', 'http://bildungswerk-lsa.de/index.php?article_id=44'
+        / li.dropdown.yellow-menu class=('active' if request.path =~ /\A\/ausbildung/)
           a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
             | Ausbildung
           ul.dropdown-menu.menu-items
@@ -40,7 +48,9 @@ nav.navbar.navbar-default.navbar-fixed-top
             - links.each do |label, path|
               - path = "/ausbildung/#{path}"
               li class=('active' if request.path =~ Regexp.new(path)) = link_to label, path
-        li.dropdown.yellow-menu class=('active' if request.path =~ /\A\/quereinstieg/)
+        / li.dropdown.yellow-menu class=('active' if request.path =~ /\A\/quereinstieg/)
+          = link_to 'Quereinstieg', '/quereinstieg'
+        / li.dropdown.yellow-menu class=('active' if request.path =~ /\A\/quereinstieg/)
           a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
             | Quereinstieg
           ul.dropdown-menu.menu-items
@@ -48,7 +58,7 @@ nav.navbar.navbar-default.navbar-fixed-top
             - links.each do |label, path|
               - path = "/quereinstieg/#{path}"
               li class=('active' if request.path == path) = link_to label, path
-        li.dropdown class=('active' if request.path =~ /\A\/kontakt|\A\/standorte/)
+        / li.dropdown class=('active' if request.path =~ /\A\/kontakt|\A\/standorte/)
           a.dropdown-toggle href="#" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"
             | Kontakt
           ul.dropdown-menu.menu-items
