--- a/app/views/alchemy/messages_mailer/contact_form_mail.de.text.erb
+++ b/app/views/alchemy/messages_mailer/contact_form_mail.de.text.erb
@@ -3,10 +3,5 @@
 --
 
 Absender:
-
-<%= Alchemy.t(@message.salutation, scope: 'contactform.labels') %> <%= @message.firstname %> <%= @message.lastname %>
-<%= @message.address %>
-<%= @message.zip %> <%= @message.city %>
-
-Telefon: <%= @message.phone %>
-E-Mail: <%= @message.email %>
+<%= @message.name %>
+<%= @message.email %>
