--- a/app/views/layouts/external/_navigation.html.slim
+++ b/app/views/layouts/external/_navigation.html.slim
@@ -12,7 +12,8 @@ nav.navbar.navbar-default.navbar-fixed-top
       a.navbar-brand href=alchemy.root_url
 
     #navbar-collapse.collapse.navbar-collapse
-      - if Alchemy::Page.find_by( name: 'Startseite').children.published.any?
+      / - if Alchemy::Page.find_by( name: 'Startseite').children.published.any?
+      - if current_user
         = render 'layouts/external/new_nav'
       - else
         = render 'layouts/external/old_nav'
