--- a/app/views/pages/static/bildungswerk/profil.html.slim
+++ b/app/views/pages/static/bildungswerk/profil.html.slim
@@ -1,34 +1,20 @@
 .container.bereich-block
   h1 Bildungswerk - Profil
   p Mit über 25 Jahren Erfahrung steht das Bildungswerk für:
-  .row
-    .col-md-4
-      .content
-        .bereich-content einen <b><span class="keyword">ganzheitlich</span>en Bildungsansatz</b> im Sinne eines
-          <b><span class="keyword">humanistisch</span>en Menschenbildes</b>
-    .col-md-4
-      .content
-        .bereich-content <b><span class="keyword">passgenau</span>e, auf die Praxis</b> sozialer und ökologischer
-          Arbeit <b>zugeschnittene</b> Fort- und <b>Weiterbildung</b>sangebote
-    .col-md-4
-      .content
-        .bereich-content <b><span class="keyword">innovativ</span>e</b>,
-          <b><span class="keyword">erwachsenengerecht</span>e</b> und
-          <b><span class="keyword">praxisorientiert</span>e Ausbildungskonzept</b>e
+
+  ul
+    li einen ganzheitlichen Bildungsansatz im Sinne eines humanistischen Menschenbildes
+    li passgenaue, auf die Praxis sozialer und ökologischer Arbeit zugeschnittene Fort- und Weiterbildungsangebote
+    li innovative, erwachsenengerechte und praxisorientierte Ausbildungskonzepte
 
   hr
-  .row
-    .col-md-6
-      p Das PARITÄTISCHE Bildungswerk Landesverband Sachsen-Anhalt e.V. ist eine Einrichtung der
-        Erwachsenenbildung und gehört mit jährlich etwa 950 Kursen und Seminaren zu den größeren
-        Bildungsanbietern in Sachsen-Anhalt.
+  p Das PARITÄTISCHE Bildungswerk Landesverband Sachsen-Anhalt e.V. ist eine Einrichtung der Erwachsenenbildung und gehört mit jährlich etwa 950 Kursen und Seminaren zu den größeren Bildungsanbietern in Sachsen-Anhalt.
 
-      p Unsere Kurs- und Seminarangebote richten sich vor allem an Hilfs-, Fach- und Führungskräfte aus sozialen Einrichtungen und umfassen ein breites Spektrum an sozialen Themen.
+  p Unsere Kurs- und Seminarangebote richten sich vor allem an Hilfs-, Fach- und Führungskräfte aus sozialen Einrichtungen und umfassen ein breites Spektrum an sozialen Themen.
 
-    .col-md-6
-      p Mit den Seminaren und Veranstaltungen unseres Kooperationspartners, dem Ökodorf Sieben Linden (verlinken: https://siebenlinden.org/de/seminare/calendar/), bieten wir Interessierten ein ganzheitliches Lernfeld zu einer Vielzahl an ökologischen Themen.
+  p Mit den Seminaren und Veranstaltungen unseres Kooperationspartners, dem Ökodorf Sieben Linden (verlinken: https://siebenlinden.org/de/seminare/calendar/), bieten wir Interessierten ein ganzheitliches Lernfeld zu einer Vielzahl an ökologischen Themen.
 
-      p In zwei Fachschulen für Sozialwesen bilden wir praxisnah und erwachsenengerecht Staatlich anerkannte Erzieher*innen sowie Heilpädagog*innen und Heilerziehungspfleger*innen aus.
+  p In zwei Fachschulen für Sozialwesen bilden wir praxisnah und erwachsenengerecht Staatlich anerkannte Erzieher*innen sowie Heilpädagog*innen und Heilerziehungspfleger*innen aus.
 
 sass:
   .bereich-content
