admin nav brand link points to homepage

--- a/app/views/layouts/admin/_navigation.html.slim
+++ b/app/views/layouts/admin/_navigation.html.slim
@@ -6,7 +6,7 @@ nav.navbar.navbar-inverse.navbar-fixed-top
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      = link_to 'Start', admin_root_path, class: 'navbar-brand', tabindex: -1
+      = link_to 'Start', alchemy.root_url, class: 'navbar-brand', tabindex: -1
     .collapse.navbar-collapse
       ul.nav.navbar-nav
         li class=('active' if controller_name == 'seminars')
