fix slider margin bottom

--- a/app/assets/stylesheets/external/template/_slider.sass
+++ b/app/assets/stylesheets/external/template/_slider.sass
@@ -47,8 +47,8 @@
     margin-right: auto
     margin-left: auto
 
-  .container-nav
-    margin-top: -30px
+  //.container-nav
+    //margin-top: -30px
 
   .slide
     width: 100%
