--- a/app/views/seminare/_table.html.slim
+++ b/app/views/seminare/_table.html.slim
@@ -1,7 +1,7 @@
 - grouped_seminars = seminars.order(:date).includes(:teachers).all.group_by { |s| [s.date.month, s.year] }
 - grouped_seminars.each do |(month, year), seminars|
   h3 #{ t('date.month_names')[month] } #{ year }
-  .seminars-table.list-group
+  .seminars-table.list-group class=css_class
     - seminars.each do |seminar|
       - cache seminar do
         = link_to seminar_visitor_url(seminar), class: 'list-group-item' do
