team page with bootstrap media

--- a/app/assets/stylesheets/alchemy/elements/team_member.sass
+++ b/app/assets/stylesheets/alchemy/elements/team_member.sass
@@ -1,10 +1,23 @@
-.team_member
-  clear: left
-  padding: 1em 0
-  .image
-    float: left
-    padding-right: 1em
+//.team_member
+//  clear: left
+//  padding: 1em 0
+//  .image
+//    float: left
+//    padding-right: 1em
+//    img
+//      height: 10em
+//  .name
+//    font-weight: bold
+.team-member.media
+  .media-left
+    width: 100px
+    height: 100px
+    overflow: hidden
     img
-      height: 10em
-  .name
-    font-weight: bold
+      width: 100px
+      //height: 100px
+      margin: 0 0 -35px 0
+  .media-body
+    width: 80%
+    p
+      margin: 0
