--- a/app/views/alchemy/elements/_team_member_view.html.slim
+++ b/app/views/alchemy/elements/_team_member_view.html.slim
@@ -1,5 +1,12 @@
 - cache(element) do
-  = element_view_for(element) do |el|
+  = element_view_for(element, class: 'media team-member') do |el|
+    .media-left
+      = el.render :picture, {}, { class: 'media-object' }
+    .media-body
+      h4 class="media-heading" = el.render :name
+      p = el.render :position
+      p = el.render :phone
+      p = el.render :email
     / .row
       .col-md-4
         .image = el.render :picture
@@ -8,8 +15,8 @@
         .employee-position = el.render :position
         .employee-phone    = el.render :phone
         .employee-email    = el.render :email
-    .image = el.render :picture
-    .name = el.render :name
-    .position = el.render :position
-    .phone = el.render :phone
-    .email = el.render :email
+    / .image = el.render :picture
+    / .name = el.render :name
+    / .position = el.render :position
+    / .phone = el.render :phone
+    / .email = el.render :email
