--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,8 +12,8 @@ html.no-js lang="de"
     meta content=content_for(:page_description) name="description"
 
     = render 'alchemy/pages/meta_data'
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload', defer: true
+    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true
     == csrf_meta_tags
 
     /[if IE 9]
