--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,7 @@ html.no-js lang="de"
 
     = render 'alchemy/pages/meta_data'
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload', defer: true
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true
+    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     == csrf_meta_tags
 
     /[if IE 9]
