--- a/app/views/seminare/page_not_found.html.slim
+++ b/app/views/seminare/page_not_found.html.slim
@@ -2,4 +2,4 @@ h1 Das Seminar konnte nicht gefunden werden
 
 p
   | Zurück zur
-  =< link_to 'Startseite', main_app.root_url
+  =< link_to 'Startseite', alchemy.root_url
